--- a/chef/Rakefile
+++ b/chef/Rakefile
@@ -26,13 +26,12 @@ require './tasks/rspec.rb'
 
 GEM_NAME = "chef"
 
-spec = eval(File.read("chef.gemspec"))
-
 # This has to be here or else the docs get generated *after* the gem is created
 task :gem => 'docs:all'
 
-Gem::PackageTask.new(spec) do |pkg|
-  pkg.gem_spec = spec
+Dir[File.expand_path("../*gemspec",__FILE__)].each do |gemspec_path|
+  spec = eval(IO.read(gemspec_path))
+  Gem::PackageTask.new(spec).define 
 end
 
 begin
